# inflow-lab

./: .dockerignore  .gitignore  AGENTS.md  AUTOPILOT_TASKS.md  DEPLOYMENT_PROFILES.md  DESIGN_PARTNER_DEMO_SCRIPT.md  Dockerfile  PRODUCTION_SURFACE.md  README.md  RELEASE_CHECKLIST.md  REPO_PURPOSE.md  SECURITY_BOUNDARIES.md  docker-entrypoint.sh  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run_full_fsma_simulation.py
.github/workflows/: ci.yml  codex-autopilot.yml  remote-browser-smoke.yml  remote-smoke.yml
app/: audit.py  auth.py  auth_middleware.py  build_info.py  controller.py  cors.py  csv_importer.py  cte_rules.py  demo_fixtures.py  dependencies.py  engine.py  epcis_export.py  exceptions.py  fda_export.py  industry_adapters.py  main.py  mock_service.py  models.py  regengine_client.py  scenario_saves.py  scenarios.py  store.py  tenancy.py
app/routers/: events.py  health.py  ingestion.py  mock_regengine.py  operator.py  scenarios.py  simulation.py
app/schemas/: domain.py  exports.py  ingestion.py  operator.py  (+2 more)
docs/: HMAC_STAGING_VALIDATION.md  PRESSURE_TEST_PRD.md  PRODUCTION_INGEST_ARENA_PRD.md
scripts/: browser_smoke.py  live_trial.py  pressure_gravitram.py  pressure_trial.py  remote_smoke.py  smoke_regression.py
tests/: conftest.py  test_api.py  test_audit.py  test_browser_smoke.py  test_csv_importer.py  test_engine.py  test_live_trial.py  test_messy_data_validation.py  test_persist_path_guard.py  test_pressure_gravitram.py  test_pressure_trial.py  test_regengine_client.py  test_remote_smoke.py  test_scenarios.py  test_store.py
(+6 files in other folders)
