[project]
name = "regengine-codex-workspace"
version = "0.1.0"
description = "Mock-first FSMA 204 inflow simulator for RegEngine-compatible payloads"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "bandit>=1.7.10",
  "pip-audit>=2.7.0",
]
browser = [
  "playwright>=1.58.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
